--- a/style.css
+++ b/style.css
@@ -19,3 +19,7 @@ body {
 h1 {text-align: center; font-size: 60px;}
 
 p {font-family: Courier; text-align: center; font-size: 20px;}
+
+.indexP 
+
+p {text-align: center;}
